[gd_scene load_steps=14 format=3 uid="uid://kprkvpgi57h6"]

[ext_resource type="Script" uid="uid://c3riltpe58med" path="res://player/script/player.gd" id="1_epl1i"]
[ext_resource type="Script" uid="uid://dniese0vs0di0" path="res://player/script/StateMachine.gd" id="2_hromg"]
[ext_resource type="Resource" uid="uid://bblqvrq0fkaeu" path="res://player/player_res/player_1.tres" id="2_pyku5"]
[ext_resource type="Script" uid="uid://unxafhttity7" path="res://player/script/idle.gd" id="3_hqb76"]
[ext_resource type="Script" uid="uid://clb1f63eiqyov" path="res://player/script/juice_things.gd" id="4_p8h82"]
[ext_resource type="Script" uid="uid://xjuw00iryijy" path="res://player/script/walk.gd" id="4_rtiqt"]
[ext_resource type="Script" uid="uid://bnig6cdx00bys" path="res://player/script/jump_state.gd" id="5_57g6r"]
[ext_resource type="Script" uid="uid://thlmkop1cqmi" path="res://player/script/sprint_state.gd" id="7_73kcs"]
[ext_resource type="Script" uid="uid://c2nx72fcqucnk" path="res://player/ui/ui.gd" id="9_73kcs"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_epl1i"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hromg"]

[sub_resource type="BoxMesh" id="BoxMesh_hqb76"]
size = Vector3(0.165, 0.165, 0.94)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_hqb76"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_epl1i")
current_player = ExtResource("2_pyku5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_epl1i")

[node name="place_holder_meshes" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="place_holder_meshes"]
mesh = SubResource("CapsuleMesh_hromg")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="place_holder_meshes"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.011, 0.523, -0.455)
layers = 2
mesh = SubResource("BoxMesh_hqb76")
skeleton = NodePath("../..")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.571632, 0.00876737)

[node name="eye" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="Head/eye"]
cull_mask = 1048573

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("2_hromg")
current_state = NodePath("IdleState")
metadata/_custom_type_script = "uid://dniese0vs0di0"

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("3_hqb76")
metadata/_custom_type_script = "uid://c5nx4ik52nbs0"

[node name="WalkState" type="Node" parent="StateMachine"]
script = ExtResource("4_rtiqt")
metadata/_custom_type_script = "uid://c5nx4ik52nbs0"

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("5_57g6r")
metadata/_custom_type_script = "uid://c5nx4ik52nbs0"

[node name="SprintState" type="Node" parent="StateMachine"]
script = ExtResource("7_73kcs")
metadata/_custom_type_script = "uid://c5nx4ik52nbs0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_hqb76")
anim_player = NodePath("../AnimationPlayer")

[node name="Juice_things" type="Node3D" parent="."]
script = ExtResource("4_p8h82")

[node name="ui" type="CanvasLayer" parent="."]
script = ExtResource("9_73kcs")

[node name="Panel" type="Panel" parent="ui"]
offset_right = 280.0
offset_bottom = 128.0

[node name="VSplitContainer" type="VBoxContainer" parent="ui/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedContainer" type="HBoxContainer" parent="ui/Panel/VSplitContainer"]
layout_mode = 2

[node name="Speed" type="Label" parent="ui/Panel/VSplitContainer/SpeedContainer"]
layout_mode = 2
text = "Speed:"

[node name="speed_val" type="Label" parent="ui/Panel/VSplitContainer/SpeedContainer"]
layout_mode = 2

[node name="state" type="HBoxContainer" parent="ui/Panel/VSplitContainer"]
layout_mode = 2

[node name="state_labe" type="Label" parent="ui/Panel/VSplitContainer/state"]
layout_mode = 2
text = "State:"

[node name="state_val" type="Label" parent="ui/Panel/VSplitContainer/state"]
layout_mode = 2

[node name="fps" type="HBoxContainer" parent="ui/Panel/VSplitContainer"]
layout_mode = 2

[node name="fps_label" type="Label" parent="ui/Panel/VSplitContainer/fps"]
layout_mode = 2
text = "FPS:"

[node name="fps_val" type="Label" parent="ui/Panel/VSplitContainer/fps"]
layout_mode = 2

[connection signal="state_changed" from="StateMachine" to="ui" method="_on_state_machine_state_changed"]
